--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,7 +58,10 @@
         <activity
             android:label="@string/app_name"
             android:name="com.android.sungrackgbs.MemberAttendActivity" />
-
+        <activity
+            android:label="@string/app_name"
+            android:name="com.android.sungrackgbs.GbsmemberAttendActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:label="@string/app_name"
             android:name="com.android.sungrackgbs.OptionActivity"
