--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    android:versionCode="2"
-    android:versionName="2.0"
     package="com.android.sungrackgbs">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -27,8 +25,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:name="com.android.sungrackgbs.CommonValue">
-        <activity android:name="com.android.sungrackgbs.MyAndroidActivity">
+        android:usesCleartextTraffic="true"
+        android:name="com.sungrack.gbs.CommonValue">
+
+        <activity android:name="com.sungrack.gbs.MyAndroidActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -39,47 +39,47 @@
 
         <activity
             android:label="@string/app_name"
-            android:name="com.android.sungrackgbs.MainMenuActivity"
+            android:name="com.sungrack.gbs.MainMenuActivity"
             android:screenOrientation="portrait" />
         <activity
             android:label="@string/app_name"
-            android:name="com.android.sungrackgbs.MemberActivity"
+            android:name="com.sungrack.gbs.MemberActivity"
             android:screenOrientation="portrait" />
         <activity
             android:label="@string/app_name"
-            android:name="com.android.sungrackgbs.MemberMgrActivity"
-            android:screenOrientation="portrait" />
-
-        <activity
-            android:label="@string/app_name"
-            android:name="com.android.sungrackgbs.MemberMgrDetailActivity"
+            android:name="com.sungrack.gbs.MemberMgrActivity"
             android:screenOrientation="portrait" />
 
         <activity
             android:label="@string/app_name"
-            android:name="com.android.sungrackgbs.MemberAttendActivity" />
-        <activity
-            android:label="@string/app_name"
-            android:name="com.android.sungrackgbs.GbsmemberAttendActivity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:label="@string/app_name"
-            android:name="com.android.sungrackgbs.OptionActivity"
+            android:name="com.sungrack.gbs.MemberMgrDetailActivity"
             android:screenOrientation="portrait" />
 
         <activity
             android:label="@string/app_name"
-            android:name="com.android.sungrackgbs.AddService"
+            android:name="com.sungrack.gbs.MemberAttendActivity" />
+        <activity
+            android:label="@string/app_name"
+            android:name="com.sungrack.gbs.GbsmemberAttendActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:label="@string/app_name"
+            android:name="com.sungrack.gbs.OptionActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:label="@string/app_name"
+            android:name="com.sungrack.gbs.AddService"
             android:screenOrientation="portrait" />
 
         <receiver
             android:label="@string/app_name"
-            android:name="com.android.sungrackgbs.BirthAlarmReceiver"
+            android:name="com.sungrack.gbs.BirthAlarmReceiver"
             android:process=":remote" />
 
         <receiver
             android:label="@string/app_name"
-            android:name="com.android.sungrackgbs.startup"
+            android:name="com.sungrack.gbs.startup"
             android:enabled="true"
             android:exported="false">
             <intent-filter>
@@ -87,6 +87,11 @@
                     android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
+
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false"/>
+
     </application>
 
 </manifest>
